# VulkanRenderer

./: CMakeLists.txt  Makefile  README.md  main.cpp
.cache/clangd/index/: buffers.cpp.395E788E80F58B0F.idx  buffers.hpp.093A9B117695838B.idx  camera.cpp.A0D4A0BABC623338.idx  camera.hpp.305B233EEB314052.idx  lighting.cpp.86CF5DD3CEB9C415.idx  lighting.hpp.7270755596D798E3.idx  main.cpp.B78D8CE92C0924F6.idx  objects.cpp.63699FC607733E39.idx  objects.hpp.0DE90462C0A2EEB6.idx  threedl.cpp.78BD925362C98CBC.idx  threedl.hpp.CAFA527D7BFD2605.idx  types.hpp.36E5C5DC32A0F8C6.idx  vulkan-utils.cpp.1D99C80C9E39F108.idx  vulkan-utils.hpp.CBDA46803EC3D74A.idx
assets/: F-18.mtl  Floor.mtl
assets/911/: 911.mtl
assets/cs2/: cs2.mtl
engine/: camera.cpp  camera.hpp  lighting.cpp  lighting.hpp  objects.cpp  objects.hpp  threedl.cpp  threedl.hpp  types.hpp
engine/vulkan/: buffers.cpp  buffers.hpp  vulkan-utils.cpp  vulkan-utils.hpp
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
